# closer-plasmoid

./: CMakeLists.txt  Messages.sh  README.md  closer.cpp  closer.h  hisc-app-closer.svgz  plasma-applet-closer.desktop
